--- a/frontpy/templates/deputy.html
+++ b/frontpy/templates/deputy.html
@@ -1,21 +1,69 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="span2"><img style="height: 128px;" src="{{ deputy.image }}"</img></div>
-    <div class="span2">{{ deputy.name }}</div>
+    <div class="span2">
+        <ul class="thumbnails">
+            <li class="">
+                <a href="#" class="thumbnail">
+                    <img style="height: 128px;" src="{{ deputy.image }}"</img>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="offset2"><h1>{{ deputy.name }}</h1></div>
+    <div class="offset2"><h3>{{ deputy.jurisdiction }}</h3></div>
+    <div class="offset2"><i class="icon-info-sign"></i> <a href="{{ deputy.url }}">Voir sur le site de l'Assemblee Nationale</a></div>
+    <div class="offset2"><i class="icon-info-sign"></i> <a href="http://www.nosdeputes.fr/{{ deputy.name|lower|replace(" ", "-") }}">Voir sur NosDeputes.fr</a></div>
 </div>
-{% for vote, results in queries.items() %}
-<table class="table table-striped">
-    <thead>
-        <th colspan="2"><h1>{{ vote }}</h1></th>
-    </thead>
-    <tbody>
-        {% for result in results.hits %}
-        <tr>
-            <td><a href="{{ result.fields.file_href }}">{{ result.fields.title }}</a></td>
-        </tr>
+<div class="tabbable">
+    <ul class="nav nav-tabs">
+        {% for vote, results in queries.items() %}
+            <li class="{% if loop.first %}active{% endif %}">
+                <a href="#votes_{{ vote}}" data-toggle="tab">{{ vote }} <span class="badge">{{ results.total }}</span></a></li>
+            </li>
         {% endfor %}
-    </tbody>
-</table>
-{% endfor %}
+    </ul>
+    <div class="tab-content">
+        {% for vote, results in queries.items() %}
+            <div class="tab-pane {% if loop.first %}active{% endif %}" id="votes_{{ vote }}">
+                <table class="table table-striped">
+                    <tbody>
+                        {% for result in results.hits %}
+                        <tr>
+                            <td>
+                                {% if result._source.votes.yea|length >= result._source.votes.nay|length %}
+                                    <span class="label label-success">Adopté</span>
+                                {% else %}
+                                    <span class="label label-important">Rejeté</span>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if result._source.url %}
+                                    <a href="{{ result._source.url }}">{{ result._source.title }}</a>
+                                {% else %}
+                                    {{ result._source.title }}
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if result._source.file_href %}
+                                    <div class="span2">
+                                        <i class="icon-search"></i>
+                                        <a href="{{ result._source.file_href }}">Le dossier</a>
+                                    </div>
+                                {% endif %}
+                                {% if result._source.law_href and result._source.law_href.0 %}
+                                    <div class="span2">
+                                        <i class="icon-book"></i>
+                                        <a href="{{ result._source.law_href.0 }}">La loi</a>
+                                    </div>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
