--- a/frontpy/templates/base.html
+++ b/frontpy/templates/base.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
     <head>
-        <title>Le Vote</title>
+        {% block head %}
+        {% endblock %}
+
+        <meta property="og:site_name" content="QuiVoteQuoi" />
+
         <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
