--- a/frontpy/templates/index.html
+++ b/frontpy/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block head %}
+    <title>QuiVoteQuoi</title>
+{% endblock %}
 {% block content %}
 <div class="hero-unit">
     <h1>Qui vote quoi?</h1>
