update of frontend

--- a/frontpy/templates/base.html
+++ b/frontpy/templates/base.html
@@ -6,7 +6,8 @@
 
         <meta property="og:site_name" content="QuiVoteQuoi" />
 
-        <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/cerulean.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/quivotequoi.css') }}" rel="stylesheet">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
         <script src="{{ url_for('static', filename='js/bootstrap-typeahead.js') }}"></script>
