--- a/frontpy/templates/index.html
+++ b/frontpy/templates/index.html
@@ -9,7 +9,7 @@
             <h1>Qui vote quoi ?</h1>
             <p>Le vote de chaque depute, scrutin par scrutin.</p>
         </div>
-        <div class="offset8">
+        <div class="pull-right">
             <ul class="thumbnails">
                 <li>
                     <a href="/deputes/{{ deputy.uuid }}" class="thumbnail">
@@ -19,24 +19,6 @@
                 </li>
             </ul>
         </div>
-    </div>
-</div>
-<div class="row">
-    <div class="span4">
-        <h2>Pourquoi ?</h2>
-        <p>
-            Parce que le vote est la vraie parole du depute.
-        </p>
-    </div>
-    <div class="span4">
-        <h2>Comment ?</h2>
-        <p>
-
-        </p>
-    </div>
-    <div class="span4">
-        <h2>Par exemple ?</h2>
-        <p>QuiVoteQuoi classe les deputes sur leurs votes.</p>
     </div>
 </div>
 {% endblock %}
