--- a/frontpy/static/css/quivotequoi.css
+++ b/frontpy/static/css/quivotequoi.css
@@ -3,3 +3,14 @@
     max-height: 500px;
     overflow: auto;
 }
+
+.footer {
+    margin-top: 45px;
+    padding: 35px 0 36px;
+    border-top: 1px solid #E5E5E5;
+}
+
+.footer p {
+    margin-bottom: 0;
+    color: #555;
+}
