--- a/front/src/quivotequoi/front/templates/deputy.html
+++ b/front/src/quivotequoi/front/templates/deputy.html
@@ -27,8 +27,8 @@
         </div>
         <div class="offset1"><h3>{{ deputy.jurisdiction }}</h3></div>
         <div class="offset1"><h3>{{ deputy.party }}</h3></div>
-        <div class="offset1"><i class="icon-info-sign"></i> <a href="{{ deputy.url }}">Voir sur le site de l'Assemblee Nationale</a></div>
-        <div class="offset1"><i class="icon-info-sign"></i> <a href="http://www.nosdeputes.fr/{{ deputy.name|lower|replace(" ", "-") }}">Voir sur NosDeputes.fr</a></div>
+        <div class="offset1"><i class="icon-info-sign"></i> <a href="{{ deputy.url }}">Voir sur le site de l'Assemblée Nationale</a></div>
+        <div class="offset1"><i class="icon-info-sign"></i> <a href="http://www.nosdeputes.fr/{{ deputy.name|lower|replace(" ", "-") }}">Voir sur NosDéputés.fr</a></div>
     </div>
 </section>
 <section id="scrutins">
