--- a/front/src/quivotequoi/front/templates/scrutiny.html
+++ b/front/src/quivotequoi/front/templates/scrutiny.html
@@ -6,7 +6,7 @@
         <a class="scrutiny_link" name="{{ result._source.uuid }}" data-toggle="collapse" data-target="#more_{{ result._source.uuid }}">{{ result._source.title|capitalize }}</a>
         <div id="more_{{ result._source.uuid }}" class="collapse">
             <hr/>
-            <h4><i class="icon-chevron-right"></i> <a href="#{{ result._source.uuid }}" data-toggle="collapse" data-target="#vote_{{ result._source.uuid }}">Detail du vote</a></h4>
+            <h4><i class="icon-chevron-right"></i> <a data-toggle="collapse" data-target="#vote_{{ result._source.uuid }}">Detail du vote</a></h4>
             <div id="vote_{{ result._source.uuid }}" class="collapse in">
                 <table  class="table table-striped table-condensed">
                     <thead>
@@ -37,27 +37,27 @@
             </div>
 
             {% if result._source.info %}
-                <h4><i class="icon-chevron-right"></i> <a href="#{{ result._source.uuid }}" data-toggle="collapse" data-target="#info_{{ result._source.uuid }}">Principales dispositions du texte</a></h4>
+                <h4><i class="icon-chevron-right"></i> <a data-toggle="collapse" data-target="#info_{{ result._source.uuid }}">Principales dispositions du texte</a></h4>
                 <div id="info_{{ result._source.uuid }}" class="collapse">
                     <pre class="info">{{ result._source.info }}</pre>
                 </div>
             {% endif %}
 
             {% if result._source.amendments %}
-                <h4><i class="icon-chevron-right"></i> <a href="#{{ result._source.uuid }}" data-toggle="collapse" data-target="#amendments_{{ result._source.uuid }}">Principaux amendements</a></h4>
+                <h4><i class="icon-chevron-right"></i> <a data-toggle="collapse" data-target="#amendments_{{ result._source.uuid }}">Principaux amendements</a></h4>
                 <div id="amendments_{{ result._source.uuid }}" class="collapse">
                     <pre class="info">{{ result._source.amendments }}</pre>
                 </div>
             {% endif %}
 
             {% if result._source.summary %}
-                <h4><i class="icon-chevron-right"></i> <a href="#{{ result._source.uuid }}" data-toggle="collapse" data-target="#summary_{{ result._source.uuid }}">Compte rendu</a></h4>
+                <h4><i class="icon-chevron-right"></i> <a data-toggle="collapse" data-target="#summary_{{ result._source.uuid }}">Compte rendu</a></h4>
                 <div id="summary_{{ result._source.uuid }}" class="collapse">
                     <pre class="info">{{ result._source.summary }}</pre>
                 </div>
             {% endif %}
 
-            <h4><i class="icon-chevron-right"></i> <a href="#{{ result._source.uuid }}" data-toggle="collapse" data-target="#links_{{ result._source.uuid }}">Liens utiles</a></h4>
+            <h4><i class="icon-chevron-right"></i> <a data-toggle="collapse" data-target="#links_{{ result._source.uuid }}">Liens utiles</a></h4>
             <div id="links_{{ result._source.uuid }}" class="collapse in">
                 <ul>
                     <li><i class="icon-search"></i> <a href="{{ result._source.url }}" target="_blank">Voir le scrutin au Journal Officiel</a></li>
