--- a/front/src/quivotequoi/front/templates/base.html
+++ b/front/src/quivotequoi/front/templates/base.html
@@ -36,7 +36,7 @@
                 <p>Créé par <a href="http://twitter.com/steeve">@steeve</a>, <a href="http://twitter.com/zllak">@zllak</a> et <a href="http://twitter.com/SamuelClara">@SamuelClara</a>
                    avec des vrais morceaux de <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> et d'<a href="http://www.elasticsearch.org">elasticsearch</a> dedans.</p>
                 <p>Toutes les données sont publiquement accessibles et extraites du site de l'<a href="http://www.assemblee-nationale.fr/">Assemblée Nationale</a>.</p>
-                <p>Les auteurs ne sont pas responsables de l'usage ni de l'exactitute des informations présentent sur ce site.</p>
+                <p>Les auteurs ne sont pas responsables de l'usage ni de l'exactitute des informations présentes sur ce site.</p>
                 <p>Tous droits réservés.</p>
             </footer>
             {% endblock %}
