--- a/front/src/quivotequoi/front/templates/base.html
+++ b/front/src/quivotequoi/front/templates/base.html
@@ -12,6 +12,22 @@
         <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
         <script src="{{ url_for('static', filename='js/bootstrap-typeahead.js') }}"></script>
         <script src="{{ url_for('static', filename='js/quivotequoi.js') }}"></script>
+
+        {% block ga %}
+        <script type="text/javascript">
+
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-31875204-1']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+
+        </script>
+        {% endblock %}
     </head>
     <body>
         <div class="container">
