--- a/front/src/quivotequoi/front/templates/index.html
+++ b/front/src/quivotequoi/front/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block head %}
     <title>QuiVoteQuoi</title>
-    <meta property="description" content="Le vote de chaque deputé, scrutin par scrutin." />
+    <meta property="description" content="Le vote de chaque député, scrutin par scrutin." />
 
     <meta property="og:title" content="QuiVoteQuoi" />
-    <meta property="og:description" content="Le vote de chaque deputé, scrutin par scrutin." />
+    <meta property="og:description" content="Le vote de chaque député, scrutin par scrutin." />
 {% endblock %}
 {% block content %}
 <div class="hero-unit">
