--- a/front/src/quivotequoi/front/templates/base.html
+++ b/front/src/quivotequoi/front/templates/base.html
@@ -38,7 +38,7 @@
                     </a>
                     <div class="container">
                         <form class="navbar-search form-search pull-left">
-                            <input id="search" type="text" class="search-query span8" autocomplete="off" placeholder="Tapez le nom d'un deputé...">
+                            <input id="search" type="text" class="search-query span8" autocomplete="off" placeholder="Tapez le nom d'un député...">
                         </form>
                     </div>
                 </div>
